--- a/css/custom-styles.css
+++ b/css/custom-styles.css
@@ -8,13 +8,31 @@ body {
 
 h1 {
     font-size: 4em;
-	color: hsl(0, 0%, 100%);
+    color: hsl(0, 0%, 100%);
+    text-transform: uppercase;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 1);
+}
+
+h1 ~ small {
+    font-size: 1.8em;
+    padding-left: 20px;
+    margin-top: -15px;
+    display: block;
+    text-shadow:    
+        -2px 0 hsla(0, 100%, 100%, .5),
+        0 2px hsla(0, 100%, 100%, .5),
+        2px 0 hsla(0, 100%, 100%, .5),
+        0 -2px hsla(0, 100%, 100%, .5);
+}
+
+hr {
+    border-top: 1px dotted rgba(255,255,255,.6);
 }
 
 #main {
     display: none;
     background-color: hsl(0, 100%, 100%);
-    height: 200px;
+    height: calc(100vh - 172px);
 }
 
 
@@ -22,6 +40,10 @@ h1 {
     display: none;
 }
 
+
+#page-content-wrapper {
+    padding-bottom: 0;
+}
 
 @media (min-width: 1200px) {
     #sidebar-wrapper {
